--- a/site/coral.ru/home-countdown.html
+++ b/site/coral.ru/home-countdown.html
@@ -33,9 +33,8 @@
                 </div>
             </div>
             <div class="info">
-                <h3>Скидка <strong>до 50%</strong> на проживание по акции «Раннее Бронирование».</h3>
-                <h3>Доп. скидка <strong>4 999 ₽</strong> на туры в Турцию по промокоду до 4 февраля</h3>
-                <p>*Введите промокод <strong>4999</strong> в поле «Примечание к заказу»</p>
+                <h3><span class="highest-rank-count">7</span> <span class="highest-rank-wording">дней</span> до повышения цен по акции «Ранее Бронирование»</h3>
+                <p>Успейте купить по привлекательным ценам!</p>
             </div>
             <div class="rur-icon"> </div>
         </div>
