--- a/site/sunmar.ru/home-countdown.html
+++ b/site/sunmar.ru/home-countdown.html
@@ -3,13 +3,13 @@
     <div id="home-countdown">
         <div class="inhalt">
             <div class="info">
-                <h3>Дополнительная скидка 4999 рублей на туры <br>в Турцию по акции "Раннее Бронирование"</h3>
-                <p>*Введите промокод 4999 в поле «Примечание к заказу»</p>
+                <h3><span class="highest-rank-count">7</span> <span class="highest-rank-wording">дней</span> до повышения цен по акции «Ранее Бронирование»</h3>
+                <p>Успейте купить по привлекательным ценам!</p>
             </div>
             <div class="promo-code">
                 <div class="rur-icon"></div>
-                <h3>Промокод
-                    <br><strong>4999</strong></h3>
+                <h3>Скидки
+                    <br><strong>до 50%</strong></h3>
             </div>
             <div class="countdown-widget">
                 <div data-units="days">
