--- a/site/sunmar.ru/home-countdown.html
+++ b/site/sunmar.ru/home-countdown.html
@@ -3,7 +3,7 @@
     <div id="home-countdown">
         <div class="inhalt">
             <div class="info">
-                <h3><span class="highest-rank-count">7</span> <span class="highest-rank-wording">дней</span> до повышения цен по акции «Ранее Бронирование»</h3>
+                <h3><span class="highest-rank-count">7</span> <span class="highest-rank-wording">дней</span> до повышения цен по акции «Раннее Бронирование»</h3>
                 <p>Успейте купить по привлекательным ценам!</p>
             </div>
             <div class="promo-code">
