--- a/site/coral.ru/home-countdown.html
+++ b/site/coral.ru/home-countdown.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="info">
-                <h3><span class="highest-rank-count">7</span> <span class="highest-rank-wording">дней</span> до повышения цен по акции «Ранее Бронирование»</h3>
+                <h3><span class="highest-rank-count">7</span> <span class="highest-rank-wording">дней</span> до повышения цен по акции «Раннее Бронирование»</h3>
                 <p>Успейте купить по привлекательным ценам!</p>
             </div>
             <div class="rur-icon"> </div>
