--- a/site/coral.ru/home-countdown.html
+++ b/site/coral.ru/home-countdown.html
@@ -38,7 +38,7 @@
             </div>
             <div class="rur-icon"> </div>
         </div>
-        <a href="https://www.coral.ru/hot-offers/rannee-bronirovanie-leto/" target="_blank"></a>
+        <a href="https://www.coral.ru/hot-offers/rannee-bronirovanie-leto/?main" target="_blank"></a>
     </div>
     <script type="text/javascript" src="js/home-countdown.js"></script>
 </body>
