--- a/site/sunmar.ru/home-countdown.html
+++ b/site/sunmar.ru/home-countdown.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <a href="https://www.sunmar.ru/rb-summer/" target="_blank"></a>
+        <a href="https://www.sunmar.ru/rb-summer/?main" target="_blank"></a>
     </div>
     <script type="text/javascript" src="js/home-countdown.js"></script>
 </body>
